--- a/notebooks/test_Antoine.ipynb
+++ b/notebooks/test_Antoine.ipynb
@@ -9,14 +9,16 @@
     "import os\n",
     "import pandas as pd\n",
     "import pickle\n",
-    "from scipy.sparse import csr_matrix, lil_matrix, save_npz\n",
-    "from datetime import datetime\n",
+    "from scipy.sparse import csr_matrix, save_npz\n",
     "import numpy as np\n",
     "from dotenv import load_dotenv\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sklearn.decomposition import TruncatedSVD\n",
-    "import joblib"
+    "import joblib\n",
+    "from surprise import Dataset, Reader\n",
+    "from surprise.prediction_algorithms.matrix_factorization import SVD\n",
+    "from surprise.model_selection import cross_validate\n"
    ]
   },
   {
@@ -758,6 +760,240 @@
    "source": [
     "reco = [title_to_movieid[title] for title in titles]\n",
     "print(reco)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from surprise import Dataset, Reader\n",
+    "from surprise.prediction_algorithms.matrix_factorization import SVD\n",
+    "from surprise import accuracy\n",
+    "import pandas as pd\n",
+    "from surprise.model_selection import cross_validate\n",
+    "import os\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_model(filepath: str, version: str):\n",
+    "    \"\"\"Charge le modèle entraîné depuis un fichier.\"\"\"\n",
+    "    base, ext = os.path.splitext(filepath)\n",
+    "    versioned_filepath = f\"{base}_{version}{ext}\"\n",
+    "\n",
+    "    with open(versioned_filepath, 'rb') as file:\n",
+    "        model_data = pickle.load(file)\n",
+    "        model = model_data['model']\n",
+    "        reader = model_data['reader']\n",
+    "        print(f'Modèle chargé depuis {versioned_filepath}')\n",
+    "        return model, reader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modèle chargé depuis /home/antoine/PROJET_MLOPS_RECO_MOVIES/data/models/svd_model_v1.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "model, reader = load_model(os.path.join(\"/home/antoine/PROJET_MLOPS_RECO_MOVIES/data/models/svd_model.pkl\"), 'v1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from surprise import SVD, Dataset\n",
+    "\n",
+    "def recommend_movies(model: SVD, user_id: int, df: pd.DataFrame, top_n: int = 10) -> list:\n",
+    "    \"\"\"\n",
+    "    Recommande des films à un utilisateur en fonction de ses évaluations prédites.\n",
+    "\n",
+    "    :param model: Le modèle SVD entraîné.\n",
+    "    :param user_id: L'ID de l'utilisateur pour lequel on veut des recommandations.\n",
+    "    :param df: DataFrame contenant les données des films et les évaluations.\n",
+    "    :param top_n: Le nombre de films à recommander.\n",
+    "    :return: Une liste des top_n films recommandés.\n",
+    "    \"\"\"\n",
+    "    # 1. Obtenir la liste des films que l'utilisateur a déjà évalués\n",
+    "    movies_already_rated = df[df['userid'] == user_id]['movieid'].unique()\n",
+    "\n",
+    "    # 2. Créer une liste de tous les films possibles\n",
+    "    all_movie_ids = df['movieid'].unique()\n",
+    "\n",
+    "    # 3. Filtrer les films que l'utilisateur n'a pas encore évalués\n",
+    "    movies_to_predict = [movie_id for movie_id in all_movie_ids if movie_id not in movies_already_rated]\n",
+    "\n",
+    "    # 4. Faire des prédictions pour chaque film non évalué\n",
+    "    predictions = []\n",
+    "    for movie_id in movies_to_predict:\n",
+    "        predictions.append((movie_id, model.predict(user_id, movie_id).est))\n",
+    "\n",
+    "    # 5. Trier les prédictions par ordre décroissant d'évaluation prédite\n",
+    "    predictions.sort(key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "    # 6. Retourner les top_n films\n",
+    "    top_recommendations = [movie_id for movie_id, _ in predictions[:top_n]]\n",
+    "    return top_recommendations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies = pd.read_csv('/home/antoine/PROJET_MLOPS_RECO_MOVIES/data/raw/silver/processed_movies.csv')\n",
+    "movie_titles = dict(zip(movies[\"movieid\"], movies[\"title\"]))\n",
+    "ratings = pd.read_csv('/home/antoine/PROJET_MLOPS_RECO_MOVIES/data/raw/silver/processed_ratings.csv')\n",
+    "df = pd.merge(ratings, movies, on=\"movieid\", how=\"left\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recommand_movies = recommend_movies(model, 3, df, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[114635, 88570, 26109, 78064, 127021, 124273, 5952, 80337, 45691, 44421]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(recommand_movies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Look of Silence, The\n",
+      "Welfare\n",
+      "Crooks in Clover (a.k.a. Monsieur Gangster) (Les tontons flingueurs)\n",
+      "Ween Live in Chicago\n",
+      "Rewind This!\n",
+      "Kevin Smith: Too Fat For 40\n",
+      "Lord of the Rings: The Two Towers, The\n",
+      "Still Bill\n",
+      "Edvard Munch\n",
+      "Personal Journey with Martin Scorsese Through American Movies, A\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in recommand_movies:\n",
+    "    print(movie_titles[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'builtin_function_or_method' object has no attribute 'tolist'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_6028/1323962703.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtitles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrecommand_movies\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtitles\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'builtin_function_or_method' object has no attribute 'tolist'"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Look of Silence, The', 'Welfare', 'Crooks in Clover (a.k.a. Monsieur Gangster) (Les tontons flingueurs)', 'Ween Live in Chicago', 'Rewind This!', 'Kevin Smith: Too Fat For 40', 'Lord of the Rings: The Two Towers, The', 'Still Bill', 'Edvard Munch', 'Personal Journey with Martin Scorsese Through American Movies, A']\n"
+     ]
+    }
+   ],
+   "source": [
+    "title = [movie_titles[movied] for movied in recommand_movies]\n",
+    "print(title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Charger le fichier avec scipy.sparse.load_npz\n",
+    "from scipy.sparse import load_npz\n",
+    "cos_sim = load_npz('/home/antoine/PROJET_MLOPS_RECO_MOVIES/data/models/cosine_similarity_tfidf.npz')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RECOMMNDATION SIMILARITES COSINUS\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array: array is 0-dimensional, but 1 were indexed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_84336/3653479148.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32m'recommandations'\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32m'Toy Story'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcos_sim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: too many indices for array: array is 0-dimensional, but 1 were indexed"
+     ]
+    }
+   ],
+   "source": [
+    "print('RECOMMNDATION SIMILARITES COSINUS')\n",
+    "print(recommandations('Toy Story', cos_sim))"
    ]
   },
   {
